 - Fix error message in `demangle_type_name`: printed result, not raw name.
 - Fix compile warning in `demangle_type_name` on GNU systems.
 - Start playing with C++20 _concepts._
 - Sketch out concepts-based `PQconnectdbParams` support.  (#343)
 - Add missing link to "datatypes" documentation.  (#346)
 - Supports `to_string`, `stream_to`, etc. for `binarystring`.  (#312)
 - Home-rolled hex-escaping.  Saves an allocation.
 - Catch floating-point negative overflow in `check_cast`, not underflow.
 - Bit more work on CMake build doc. (#318)
 - Typo in `datatypes.md`: `nullness`, not `nullness_traits`. (#353)
 - Fixed test names map in `tests/runner.cxx`. (#354)
 - Integral `from_string` now accept leading whitespace, as in composite types.
 - Parser prototype for composite types.  (#355)
 - Use `stream_from` without knowing the number of fields.  (#357)
 - Global `size_buffer` function.
 - `quote()` now works for always-null types without conversions defined.
 - `std::nullopt` now converts to an SQL null.
7.1.2
 - Document build in `BUILDING-configure.md` / `BUILDING-cmake.md`.
 - Work around silly clang warning in `test_errorhandler.cxx`.
 - Fix install error with some internal headers. (#322)
 - Fix "No object selected" error message in large objects.  (#324)
 - If error has no SQLSTATE, throw `broken_connection`. (#280)
 - Fix argument order in `encrypt_password`. (#333, #334)
 - Fix underestimate of buffer size for `to_string` for floats. (#328)
7.1.1
 - Compile fix for Visual Studio.
 - Warning fix for clang.
 - Also install `transaction_focus.hxx`. (#320)
7.1.0
 - Query tuples straight into `std::tuple` using `transaction::stream()`!
 - And, `stream_from` now supports more or less arbitrary queries.
 - Instead of a tuple of fields, you can pass `stream_to` a container as well.
 - `string_traits::size_buffer()` must now be `noexcept`.
 - New `nullness` member: `always_null`.
 - There is now `to_buf` support for string literals.